avoids overlapping of full text box and heading

--- a/Resources/Public/Css/main.css
+++ b/Resources/Public/Css/main.css
@@ -93,7 +93,7 @@ li.tx-dlf-navigation-pageselect label {
 
 div#tx-dlf-fulltextselection {
     padding: 10px;
-    margin-top: 40px;
+    margin-top: 43px;
     position: absolute;
     z-index: 100; /* Text over image */
     background-color: #fff;
